Refs #255149 - Solve events, news, reports panels border/background issue.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
@@ -7115,11 +7115,11 @@ form#insitu-search input.search-bar {
   border: none;
 }
 
-.homepage div[data-diazo=insitu-events-list],
-.homepage div[data-diazo=insitu-news-list],
-.homepage div[data-diazo=insitu-reports-list],
-.homepage div[data-diazo=insitu-events-list] .panel .panel-body,
-.homepage div[data-diazo=insitu-news-list] .panel .panel-body,
-.homepage div[data-diazo=insitu-reports-list] .panel .panel-body {
+div[data-diazo=insitu-events-list],
+div[data-diazo=insitu-news-list],
+div[data-diazo=insitu-reports-list],
+div[data-diazo=insitu-events-list] .panel .panel-body,
+div[data-diazo=insitu-news-list] .panel .panel-body,
+div[data-diazo=insitu-reports-list] .panel .panel-body {
   background: transparent !important;
 }
